--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,68 +1,40 @@
-apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
-
+plugins {
+    alias(libs.plugins.starter.application.android)
+}
 
 android {
-    compileSdkVersion compileSdkVer
-    buildToolsVersion buildToolsVer
-
     defaultConfig {
-        applicationId "com.scottyab.rootbeer.sample"
-        minSdkVersion minSdkVer
-        targetSdkVersion targetSdkVer
+        applicationId "io.github.usefulness.rootbeer.sample"
+        namespace "io.github.usefulness.rootbeer.sample"
         versionCode 10
         versionName "0.9"
-        vectorDrawables.useSupportLibrary = true
-
-        archivesBaseName = "RootBeerSample-$versionName-[$versionCode]"
-
-    }
-
-    //check if the keystore details are defined in gradle.properties (this is so the key is not in github)
-    if (project.hasProperty("ROOTBEER_SAMPLE_STORE")) {
-        signingConfigs {
-            //from ~/user/.gradle/gradle.properties
-            release {
-                storeFile file(ROOTBEER_SAMPLE_STORE)
-                keyAlias ROOTBEER_SAMPLE_KEY
-                storePassword ROOTBEER_SAMPLE_STORE_PASS
-                keyPassword ROOTBEER_SAMPLE_KEY_PASS
-            }
-        }
+        minSdk 26
     }
 
     buildTypes {
         debug {
             applicationIdSuffix ".debug"
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-project.txt'
         }
         release {
-            if (project.hasProperty("ROOTBEER_SAMPLE_STORE")) {
-                signingConfig signingConfigs.release
-            }
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+    buildFeatures {
+        buildConfig = true
+        viewBinding = true
     }
 }
 
 dependencies {
     implementation project(':rootbeerlib')
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutinesVersion"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutinesVersion"
-
-    implementation "androidx.core:core-ktx:$corektxVersion"
-
-    implementation "androidx.appcompat:appcompat:$appcompatVersion"
-    implementation "androidx.constraintlayout:constraintlayout:$constraintlayoutVersion"
-    implementation "com.google.android.material:material:$materialDesignVersion"
-
-    implementation "com.nineoldandroids:library:$nineoldandroidsVersion"
-    implementation "uk.co.barbuzz:beerprogressview:$beerProgressViewVersion"
-
-    implementation "com.jakewharton.timber:timber:$timberVersion"
+    implementation(libs.kotlinx.coroutines.android)
+    implementation(libs.androidx.core)
+    implementation(libs.androidx.appcompat)
+    implementation(libs.androidx.constraintlayout)
+    implementation(libs.google.material)
+    implementation(libs.nineoldandroids.library)
+    implementation(libs.barbuzz.beerprogressview)
 }
