--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,35 @@
-include ':app', ':rootbeerlib'
+import org.gradle.api.initialization.resolve.RepositoriesMode
+
+pluginManagement {
+    repositories { // https://github.com/gradle/gradle/issues/20866
+        gradlePluginPortal()
+        mavenCentral()
+        google()
+    }
+}
+
+plugins {
+    id("org.gradle.toolchains.foojay-resolver-convention") version "0.8.0"
+    id "com.gradle.enterprise" version "3.16.2"
+}
+
+gradleEnterprise {
+    buildScan {
+        termsOfServiceUrl = "https://gradle.com/terms-of-service"
+        termsOfServiceAgree = "yes"
+    }
+}
+
+dependencyResolutionManagement {
+    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
+    repositories {
+        google()
+        mavenCentral()
+    }
+}
+
+rootProject.name = "io.github.usefulness"
+
+includeBuild("gradle/plugins")
+include(":rootbeerlib")
+include(":app")
