--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -75,6 +75,29 @@ jobs:
           path: diffuse-source-file-release
           key: diffuse-${{ github.sha }}-${{ hashFiles('**/aar/**.aar') }}
 
-      - run: cp rootbeerlib/build/outputs/aar/rootbeerlib-release.aar diffuse-source-file-release
+      - run: cp rootbeer-core/build/outputs/aar/rootbeer-core-release.aar diffuse-source-file-release
         if: github.event_name != 'pull_request'
         shell: bash
+
+  build-sample-app:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: 21
+
+      - name: Assemble sample app
+        uses: gradle/gradle-build-action@v3
+        with:
+          build-root-directory: sample
+          arguments: assemble check
+
+      - uses: actions/upload-artifact@v4
+        with:
+          name: apk
+          path: sample/app/build/outputs/apk/release/*.apk
