--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,6 +4,7 @@ constraintlayout = "2.1.4"
 java-compilation = "21"
 gradle-starter = "0.71.0"
 gradle-doctor = "0.9.2"
+gradle-easylauncher = "6.3.0"
 library = "2.4.0"
 material = "1.11.0"
 maven-junit = "5.10.2"
@@ -33,3 +34,4 @@ starter-library-kotlin = { id = "com.starter.library.kotlin", version.ref = "gra
 osacky-doctor = { id = "com.osacky.doctor", version.ref = "gradle-doctor" }
 starter-application-android = { id = "com.starter.application.android", version.ref = "gradle-starter" }
 kotlinx-binarycompatibility = { id = "org.jetbrains.kotlinx.binary-compatibility-validator", version.ref = "maven-binarycompatiblity" }
+starter-easylauncher = { id = "com.starter.easylauncher", version.ref = "gradle-easylauncher" }
