--- a/rootbeer-core/src/main/jni/CMakeLists.txt
+++ b/rootbeer-core/src/main/jni/CMakeLists.txt
@@ -1,4 +1,4 @@
-project("rootbeerlib")
+project("rootbeer-jni")
 cmake_minimum_required(VERSION 3.4.1)
 
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fstack-protector-all")
