--- a/sample/app/build.gradle
+++ b/sample/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     alias(libs.plugins.starter.application.android)
+    alias(libs.plugins.starter.easylauncher)
 }
 
 android {
@@ -10,31 +11,43 @@ android {
         versionName "0.9"
         minSdk 26
     }
-
-    buildTypes {
-        debug {
-            applicationIdSuffix ".debug"
-            minifyEnabled false
+    signingConfigs {
+        named("debug") {
+            storeFile rootProject.file("keys/debug.keystore")
+            storePassword 'android'
+            keyAlias 'androiddebugkey'
+            keyPassword 'android'
         }
-        release {
-            minifyEnabled true
+    }
+    buildTypes {
+        named("debug") {
+            signingConfig signingConfigs.getByName("debug")
+            applicationIdSuffix ".debug"
+            versionNameSuffix "-debug"
+        }
+        named("release") {
+            signingConfig signingConfigs.getByName("debug")
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            minifyEnabled true
         }
     }
     buildFeatures {
         buildConfig = true
         viewBinding = true
     }
+    lint {
+        disable("SetTextI18n")
+        disable("HardcodedText")
+    }
 }
 
 dependencies {
-    implementation project(':rootbeerlib')
+    implementation("io.github.usefulness:rootbeer-core")
 
     implementation(libs.kotlinx.coroutines.android)
     implementation(libs.androidx.core)
     implementation(libs.androidx.appcompat)
     implementation(libs.androidx.constraintlayout)
     implementation(libs.google.material)
-    implementation(libs.nineoldandroids.library)
     implementation(libs.barbuzz.beerprogressview)
 }
