--- a/settings.gradle
+++ b/settings.gradle
@@ -31,5 +31,4 @@ dependencyResolutionManagement {
 rootProject.name = "io.github.usefulness"
 
 includeBuild("gradle/plugins")
-include(":rootbeerlib")
-include(":app")
+include(":rootbeer-core")
