--- a/.github/workflows/dependencies.yml
+++ b/.github/workflows/dependencies.yml
@@ -31,6 +31,14 @@ jobs:
           distribution: 'temurin'
           java-version: 21
 
+      - name: Write Gradle build properties to `~/.gradle/gradle.properties`
+        run: |
+          mkdir -p ~/.gradle
+          printf "org.gradle.jvmargs=-Xmx3G -XX:+UseParallelGC\n" >> ~/.gradle/gradle.properties
+          printf "org.gradle.vfs.watch=false\n" >> ~/.gradle/gradle.properties
+          printf "org.gradle.parallel=false\n" >> ~/.gradle/gradle.properties
+        shell: bash
+
       - uses: gradle/actions/setup-gradle@v3
 
       - run: ./gradlew assembleRelease -m
@@ -40,7 +48,7 @@ jobs:
         if: github.event_name == 'pull_request'
         uses: usefulness/dependency-tree-diff-action@v2
         with:
-          project: 'rootbeerlib-core'
+          project: 'rootbeer-core'
           configuration: releaseRuntimeClasspath
 
       - uses: peter-evans/find-comment@v3
