--- a/rootbeer-core/build.gradle
+++ b/rootbeer-core/build.gradle
@@ -20,6 +20,7 @@ android {
     lint {
         warningsAsErrors true
         checkReleaseBuilds false
+        disable("GradleDependency")
     }
     kotlinOptions {
         freeCompilerArgs += '-Xexplicit-api=strict'
