Refresh project + update publishing

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,3 +3,6 @@ org.gradle.caching=true
 org.gradle.parallel=true
 org.gradle.jvmargs="-XX:+UseParallelGC"
 android.useAndroidX=true
+org.gradle.configuration-cache=true
+org.jetbrains.dokka.experimental.gradle.pluginMode=V2Enabled
+org.jetbrains.dokka.experimental.gradle.pluginMode.noWarn=true
