--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,6 +10,7 @@ material = "1.12.0"
 maven-junit = "5.13.2"
 maven-assertj = "3.27.3"
 maven-binarycompatiblity = "0.18.0"
+maven-vanniktech-maven-publish = "0.33.0"
 
 [libraries]
 starter-android = { module = "com.project.starter:android", version.ref = "gradle-starter" }
@@ -25,6 +26,7 @@ barbuzz-beerprogressview = { module = "uk.co.barbuzz:beerprogressview", version.
 google-material = { module = "com.google.android.material:material", version.ref = "material" }
 androidx-constraintlayout = { module = "androidx.constraintlayout:constraintlayout", version.ref = "constraintlayout" }
 nineoldandroids-library = { module = "com.nineoldandroids:library", version.ref = "library" }
+vanniktech-maven-publish = { module = "com.vanniktech:gradle-maven-publish-plugin", version.ref = "maven-vanniktech-maven-publish" }
 
 [plugins]
 starter-config = { id = "com.starter.config", version.ref = "gradle-starter" }
