--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -40,7 +40,7 @@ jobs:
 
       - uses: gradle/actions/setup-gradle@v4
 
-      - uses: gradle/wrapper-validation-action@v3
+      - uses: gradle/actions/wrapper-validation@v4
 
       - run: ./gradlew projectCodestyle
 
@@ -65,7 +65,7 @@ jobs:
           ORG_GRADLE_PROJECT_signingInMemoryKeyId: ${{ secrets.SIGNING_KEY_ID }}
           ORG_GRADLE_PROJECT_signingInMemoryKeyPassword: ${{ secrets.SIGNING_PASSWORD }}
           ORG_GRADLE_PROJECT_signingInMemoryKey: ${{ secrets.GPG_KEY_CONTENTS }}
-        run: ./gradlew publishReleasePublicationToGithubRepository --no-configuration-cache
+        run: ./gradlew publishAllPublicationsToGithubRepository --no-configuration-cache
 
       - uses: actions/cache@v4
         if: github.event_name != 'pull_request'
@@ -90,11 +90,9 @@ jobs:
           distribution: 'temurin'
           java-version: 24
 
-      - name: Assemble sample app
-        uses: gradle/gradle-build-action@v3
-        with:
-          build-root-directory: sample
-          arguments: assemble check
+      - uses: gradle/actions/setup-gradle@v4
+
+      - run: ./gradlew assemble check
 
       - uses: actions/upload-artifact@v4
         with:
